<resources>
    <string name="shr_app_name">Homemaker</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_logo_content_description">Shrine Logo</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- Login -->
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Enter!</string>
    <string name="error_empty">Please fill your username!</string>
    <string name="error_password">Please fill your password!</string>

    <!-- Chat -->

    <!-- Create account -->
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_create">Create Account</string>
    <string name="error_create_account">Failed to create account!</string>



    <string name="hm_hint_phone_number">Phone Number</string>
    <string name="hm_phone_number_continue_button">Continue</string>
    <string name="hm_hint_phone_otp">OTP</string>
    <string name="hm_phone_otp_signin_button">Sign in</string>

    <!-- Related to product page   -->
    <string name="Rs">\u20B9</string>

    <!--  Related to ar  -->
    <string name="hm_coaching_motion_text">Move your device SLOWLY in a CIRCULAR fashion</string>
    <string name="hm_coaching_product_text">Click on a surface to add product</string>


</resources>
